# d-apim-mcp

./: .gitignore
.github/workflows/: build-api.yaml  build-mcp.yaml
terraform/: .terraform.lock.hcl  README.md  apim.tf  containerapp.api.tf  containerapp.env.tf  containerapp.mcp.tf  main.tf  monitoring.tf  providers.tf  variables.tf
tools/say_hello/api/: Dockerfile  README.md  main.py  pyproject.toml  say_hello_openapi.json
tools/say_hello/mcp/: Dockerfile  README.md  main.py  pyproject.toml
